@@ -167,7 +167,8 @@ data:extend({
     {
       PM.unlock_recipe("pm-sulfuric-acid-to-acidic-water"),
       PM.unlock_recipe("pm-water-deacifying"),
-      PM.unlock_recipe("pm-hydrochloric-acid-neutralisation")
+      PM.unlock_recipe("pm-hydrochloric-acid-neutralisation"),
+      PM.unlock_recipe("pm-chromic-acid-neutralisation"),
     },
     prerequisites = {"sulfur-processing" },
     unit =
